//
// This file is part of the WoW++ project.
// 
// This program is free software; you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation; either version 2 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
// 
// You should have received a copy of the GNU General Public License
// along with this program; if not, write to the Free Software 
// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
//
// World of Warcraft, and all World of Warcraft or Warcraft art, images,
// and lore are copyrighted by Blizzard Entertainment, Inc.
// 

syntax = "proto2";
package wowpp.proto;

message CombatRatingEntry {
    required uint32 id = 1;
    optional float ratingsPerLevel = 2;
}

message CombatRatings {
    repeated CombatRatingEntry entry = 1;
}

message MeleeCritChanceEntry {
    required uint32 id = 1;
    optional float chancePerLevel = 2;
	optional float baseChancePerLevel = 3;
}

message MeleeCritChance {
    repeated MeleeCritChanceEntry entry = 1;
}

message DodgeChanceEntry {
	required uint32 id = 1;
	optional float baseDodge = 2;
	optional float critToDodge = 3;
}

message DodgeChance {
	repeated DodgeChanceEntry entry = 1;
}

message ResistancePercentageEntry {
	required uint32 id = 1;
    repeated float percentages = 2;
}

message ResistancePercentage {
	repeated ResistancePercentageEntry entry = 1;
}